--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,26 @@
-*
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-!*.patch
-!PKGBUILD
-!.gitignore
-!music.png
-!README.md
-!LICENSE
-!cleanup.sh
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+pocketbase/
