--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "daisyui": "^2.46.0",
     "pocketbase": "^0.9.1",
     "postcss": "^8.4.20",
+    "react-use": "^17.4.0",
     "tailwind-scrollbar": "^2.1.0",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.6.4",
