--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,7 @@ jobs:
         run: yarn # Change this to npm, yarn or pnpm.
 
       - name: Build the app
-        uses: tauri-apps/tauri-action@v0
+        uses: jiafeitech/tauri-action@v0.2.1
 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
