--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "jiamusic",
-  "private": true,
-  "version": "0.0.0",
+  "version": "2.0.0",
   "type": "module",
+  "author": "Podter",
+  "repository": "https://github.com/Podter/jiamusic",
+  "license": "MIT",
   "scripts": {
     "tauri": "tauri",
     "dev": "tauri dev",
