--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "tauri dev",
     "build": "tauri build",
     "vite:dev": "vite",
-    "vite:build": "tsc && vite build"
+    "vite:build": "tsc && vite build",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
     "@tauri-apps/api": "^1.4.0",
@@ -22,7 +23,12 @@
     "@types/node": "^18.7.10",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
+    "eslint": "^8.43.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.1",
     "typescript": "^4.9.5",
     "vite": "^4.2.1"
   }
