--- a/package.json
+++ b/package.json
@@ -27,11 +27,17 @@
     "@typescript-eslint/parser": "^5.60.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "autoprefixer": "^10.4.14",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
     "eslint": "^8.43.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
+    "lucide-react": "^0.252.0",
     "postcss": "^8.4.24",
+    "shadcn-ui": "^0.2.1",
+    "tailwind-merge": "^1.13.2",
     "tailwindcss": "^3.3.2",
+    "tailwindcss-animate": "^1.0.6",
     "typescript": "^4.9.5",
     "vite": "^4.2.1"
   }
