--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
     "postcss": "^8.4.24",
+    "react-router-dom": "^6.14.0",
     "shadcn-ui": "^0.2.1",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "^3.3.2",
