--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint": "^8.43.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
+    "pocketbase": "^0.15.2",
     "postcss": "^8.4.24",
     "react-router-dom": "^6.14.0",
     "shadcn-ui": "^0.2.1",
