--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@tauri-apps/api": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tauri-plugin-autostart-api": "github:tauri-apps/tauri-plugin-autostart#v1"
+    "tauri-plugin-autostart-api": "github:tauri-apps/tauri-plugin-autostart#v1",
+    "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store#v1"
   },
   "devDependencies": {
     "@fluentui/react-icons": "^2.0.204",
