--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fontsource/inter": "^5.0.3",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-menubar": "^1.0.3",
+    "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^4.29.16",
     "@tauri-apps/cli": "^1.4.0",
