--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint": "^8.43.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
+    "fuse.js": "^6.6.2",
     "pocketbase": "^0.15.2",
     "postcss": "^8.4.24",
     "react-router-dom": "^6.14.0",
