--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2021"
 tauri-build = { version = "1.4", features = [] }
 
 [dependencies]
-tauri = { version = "1.4", features = [ "process-exit", "system-tray", "window-unminimize", "window-start-dragging", "window-show", "window-hide", "window-unmaximize", "window-close", "window-minimize", "window-maximize", "shell-open"] }
+tauri = { version = "1.4", features = [ "cli", "process-exit", "system-tray", "window-unminimize", "window-start-dragging", "window-show", "window-hide", "window-unmaximize", "window-close", "window-minimize", "window-maximize", "shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
