--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,11 @@ jobs:
         with:
           workspaces: "./src-tauri -> target"
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: "latest"
+
       - name: Sync node version and setup cache
         uses: actions/setup-node@v3
         with:
