--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-menubar": "^1.0.3",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.4",
     "@tanstack/react-query": "^4.29.16",
     "@tauri-apps/cli": "^1.4.0",
     "@types/node": "^18.7.10",
